Level and category added to Quiz
